shortn now can delete shorts
